* `checksums(..., write = TRUE)` ignores the contents of `CHECKSUMS.txt`, overwriting that file with the checksums of all files in the module's `data/` directory. This makes it easier to update the checksum file, *e.g.*, when adding new data (#332).
* improved module versioning (#321)
* minor bugfixes for unusual cases
* imports bit package

* **Defunct**:

    * `p`. Use `params` or `P` instead.
    * `versionWarning`. Wasn't used.

version 1.3.1
=============
* Default module path (set via `spades.modulePath` option) is now set to a temporary location to avoid unintentionally writing to the user's home directory.
* add options for cache, input, output dirs (defaults to a temp dir until changed by user)
* rename `spades.modulesPath` and `spades.modulesRepo` options to `spades.modulePath` and `spades.moduleRepo`
* New cache-related functions: `showCache` and `clearCache`

version 1.3.0
=============
* stricter package version dependencies in Imports and Suggests
* `debug` argument in `spades()` can now take any expression, character strings. `TRUE`/`FALSE` changed behavior to show only current event.
* timeunits: when there are parent and grandparent modules, if timeunit is defined, it overrides the "smallest unit" rule. Thus, a parent module can force a timeunit.
* Plot - enhancements and fixes:

    * more robust base plotting and many visual tests on Windows;
    * re-add `col` arg to `Plot` (mimicks `cols`). Was lost from version 1.1.2;
    * allow any arbitrary function to be used internally to `Plot` (*e.g.*, barplot, plot, etc.);
    * add `arr` argument to `Plot()`, allowing passing of arrangement;
    * allow `title` arg in `Plot()` to accept character for plot title;
    * `Plot` can use character passed to `title` as a title;
    * some additional functionality for plotting of factor rasters, incl. `clickValues`, legends correct for wide variety of types;