@@ -96,7 +96,6 @@ r_binary_packages:
   - secr
   - snow
   - sp
-  - stringr
   - testthat
   - tkrplot
   - xts
