@@ -81,7 +81,6 @@ Imports:
     stats,
     sp (>= 1.2-4),
     stringi (>= 1.1.3),
-    stringr (>= 1.2.0),
     utils
 LinkingTo: Rcpp
 Remotes: s-u/fastshp,
