@@ -554,10 +554,10 @@ importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(stats,setNames)
 importFrom(stringi,stri_detect_fixed)
-importFrom(stringr,str_detect)
-importFrom(stringr,str_length)
-importFrom(stringr,str_pad)
-importFrom(stringr,str_trim)
+importFrom(stringi,stri_length)
+importFrom(stringi,stri_pad)
+importFrom(stringi,stri_pad_left)
+importFrom(stringi,stri_pad_right)
 importFrom(tcltk,setTkProgressBar)
 importFrom(tcltk,tkProgressBar)
 importFrom(tools,file_ext)
