@@ -42,7 +42,7 @@ branches:
 clone_depth: 5
 
 build_script:
-  - travis-tool.sh r_binary_install archivist chron CircStats covr data.table DEoptim DiagrammeR digest dplyr DT fastmatch fastshp ff ffbase fpCompare ggplot2 gridBase httr igraph knitr lazyeval lubridate Matrix miniUI png RandomFields raster RColorBrewer rgdal rgenoud rmarkdown rstudioapi R.utils shiny snow sp stringi stringr tcltk testthat tkrplot
+  - travis-tool.sh r_binary_install archivist chron CircStats covr data.table DEoptim DiagrammeR digest dplyr DT fastmatch fastshp ff ffbase fpCompare ggplot2 gridBase httr igraph knitr lazyeval lubridate Matrix miniUI png RandomFields raster RColorBrewer rgdal rgenoud rmarkdown rstudioapi R.utils shiny snow sp stringi tcltk testthat tkrplot
   - travis-tool.sh install_deps
 
 test_script:
