@@ -40,6 +40,7 @@ version 1.3.1.9000
 * improved module versioning (#321)
 * minor bugfixes for unusual cases
 * imports bit package
+* removed stringr package from imports
 
 * **Defunct**:
 
